feat: add multiple UI improvements and error handling
- Add ErrorBoundary component for better error handling
- Implement breadcrumb navigation and lazy loading for images
- Update navigation links with active state styling
- Add CSS variables and improve styling utilities
- Update README with better documentation and Supabase setup
- Add "Back to Top" button in footer

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
     "preview": "vite preview",
-    "test": "vitest"
+    "test": "vitest",
+    "supabase:gen-types": "supabase gen types typescript --local > src/integrations/supabase/types.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
