feat: add modal component and content management for FAQs and pages
- Added Modal component for displaying forms and information.
- Implemented ManageContent view for managing page content and FAQs.
- Integrated ContentEditor for editing page content with rich text support.
- Created Orders and Dashboard views with respective components for order management and summary display.
- Added routing for admin views including dashboard, orders, and user management.
- Introduced OrdersCalendar for visualizing delivery dates.
- Updated package.json to include new dependencies: react-calendar and react-quill.
- Defined Database types for Supabase integration.
- Updated TypeScript version in package.json.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,9 @@
     "types": ["vitest/globals"],
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "react-quill": ["node_modules/react-quill"],
+      "react-calendar": ["node_modules/react-calendar"]
     },
     "noImplicitAny": true,
     "noUnusedParameters": true,
