--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
 VITE_SUPABASE_URL=sua_url_supabase_aqui
 VITE_SUPABASE_ANON_KEY=sua_chave_anon_supabase_aqui
 # Adicione outras variáveis de ambiente necessárias aqui
+VITE_SENTRY_DSN=
+# Adicione aqui a DSN do seu projeto Sentry
+VITE_GA_MEASUREMENT_ID=
+# ID do Google Analytics GA4
