--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-VITE_SUPABASE_URL=
-VITE_SUPABASE_ANON_KEY=
+VITE_SUPABASE_URL= https://<seu-projeto>.supabase.co
+VITE_SUPABASE_ANON_KEY=ANON_KEY....
 VITE_STRIPE_PUBLIC_KEY=
 VITE_SENTRY_DSN=
 VITE_GA_MEASUREMENT_ID=
