--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
+    "@vitejs/plugin-react": "^4.5.2",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "@vitest/coverage-v8": "^3.2.3",
     "autoprefixer": "^10.4.20",
