--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@tanstack/react-query": "^5.80.7",
     "@testing-library/dom": "^10.4.0",
     "@types/react-router-dom": "^5.3.3",
+    "@vercel/speed-insights": "^1.2.0",
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
