--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/react-dom": "^18.2.0",
     "typescript": "^5.0.0",
     "vite": "^5.0.0",
+    "@vitejs/plugin-react": "^4.0.0",
     "supabase": "^2.26.9"
   }
 }
