--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -9,6 +10,7 @@
     "typescript": "^5.0.0",
     "vite": "^5.0.0",
     "@vitejs/plugin-react": "^4.0.0",
+    "tailwindcss": "^3.0.0",
     "supabase": "^2.26.9"
   }
 }
