--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "vite": "^5.0.0",
     "@vitejs/plugin-react": "^4.0.0",
     "tailwindcss": "^3.0.0",
+    "autoprefixer": "^10.0.0",
     "supabase": "^2.26.9"
   }
 }
