--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@vitejs/plugin-react": "^4.0.0",
     "tailwindcss": "^3.0.0",
     "autoprefixer": "^10.0.0",
+    "@vercel/speed-insights": "latest",
     "supabase": "^2.26.9"
   }
 }
