--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "tailwindcss": "^3.0.0",
     "autoprefixer": "^10.0.0",
     "@vercel/speed-insights": "latest",
+    "@tanstack/react-query": "^5.0.0",
     "supabase": "^2.26.9"
   }
 }
