--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "autoprefixer": "^10.0.0",
     "@vercel/speed-insights": "latest",
     "@tanstack/react-query": "^5.0.0",
+    "react-router-dom": "^6.0.0",
     "supabase": "^2.26.9"
   }
 }
