--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vercel/speed-insights": "latest",
     "@tanstack/react-query": "^5.0.0",
     "react-router-dom": "^6.0.0",
+    "@sentry/react": "^8.12.0",
     "supabase": "^2.26.9"
   }
 }
