--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-query": "^5.0.0",
     "react-router-dom": "^6.0.0",
     "@sentry/react": "^8.12.0",
+    "lucide-react": "^0.395.0",
     "supabase": "^2.26.9"
   }
 }
