--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "type": "module",
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "@radix-ui/react-tooltip": "^1.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.0",
