build: add zod dependency and update vite external config
Add zod as a new dependency for schema validation and update vite's rollup external configuration to include it.

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lucide-react": "^0.395.0",
     "supabase": "^2.26.9",
     "@types/node": "^20.0.0",
-    "sonner": "^1.0.0"
+    "sonner": "^1.0.0",
+    "zod": "^3.22.4"
   }
 }
