--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "supabase": "^2.26.9",
     "@types/node": "^20.0.0",
     "sonner": "^1.0.0",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "@supabase/ssr": "^0.1.0"
   }
 }
