--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/node": "^20.0.0",
     "sonner": "^1.0.0",
     "zod": "^3.22.4",
-    "@supabase/ssr": "^0.1.0"
+    "@supabase/ssr": "^0.1.0",
+    "class-variance-authority": "^0.7.0"
   }
 }
