--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "sonner": "^1.0.0",
     "zod": "^3.22.4",
     "@supabase/ssr": "^0.1.0",
-    "class-variance-authority": "^0.7.0"
+    "class-variance-authority": "^0.7.0",
+    "@radix-ui/react-label": "^2.0.2"
   }
 }
