build(vite): add @radix-ui/react-toast to external dependencies

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "@radix-ui/react-tooltip": "^1.0.0",
-    "next-themes": "^0.3.0"
+    "next-themes": "^0.3.0",
+    "@radix-ui/react-toast": "^1.1.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.0",
