--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "@radix-ui/react-tooltip": "^1.0.0",
-    "next-themes": "^0.3.0",
-    "@radix-ui/react-toast": "^1.1.5"
+    "@radix-ui/react-toast": "^1.1.5",
+    "next-themes": "^0.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.0",
