build: add tailwind-merge dependency
Add tailwind-merge to both dependencies and vite external config to enable utility class merging functionality

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "react-dom": "^18.2.0",
     "@radix-ui/react-tooltip": "^1.0.0",
     "@radix-ui/react-toast": "^1.1.5",
-    "next-themes": "^0.3.0"
+    "next-themes": "^0.3.0",
+    "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.0",
