--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "@radix-ui/react-tooltip": "^1.0.0",
     "@radix-ui/react-toast": "^1.1.5",
     "next-themes": "^0.3.0",
-    "tailwind-merge": "^2.2.0"
+    "tailwind-merge": "^2.2.0",
+    "vaul": "^0.9.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.0",
