--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "zod": "^3.22.4",
     "@supabase/ssr": "^0.1.0",
     "class-variance-authority": "^0.7.0",
-    "@radix-ui/react-label": "^2.0.2"
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-progress": "^1.0.2"
   }
 }
