--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "@radix-ui/react-toast": "^1.1.5",
     "next-themes": "^0.3.0",
     "tailwind-merge": "^2.2.0",
-    "vaul": "^0.9.0"
+    "vaul": "^0.9.0",
+    "@radix-ui/react-radio-group": "^1.0.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.0",
