--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@supabase/ssr": "^0.1.0",
     "class-variance-authority": "^0.7.0",
     "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-progress": "^1.0.2"
+    "@radix-ui/react-progress": "^1.0.2",
+    "tailwindcss-animate": "^1.0.7"
   }
 }
