--- a/package.json
+++ b/package.json
@@ -8,7 +8,14 @@
     "next-themes": "^0.3.0",
     "tailwind-merge": "^2.2.0",
     "vaul": "^0.9.0",
-    "@radix-ui/react-radio-group": "^1.0.3"
+    "@radix-ui/react-radio-group": "^1.0.3",
+    "axios": "^1.6.0",
+    "lodash": "^4.17.21",
+    "date-fns": "^2.30.0",
+    "recharts": "^2.12.0"
+  },
+  "scripts": {
+    "build": "vite build"
   },
   "devDependencies": {
     "@types/react": "^18.2.0",
