--- a/package.json
+++ b/package.json
@@ -44,7 +44,11 @@
     "vaul": "^0.9.9"
   },
   "scripts": {
-    "build": "vite build"
+    "dev": "vite",
+    "build": "vite build",
+    "build:dev": "vite build --mode development",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
   },
   "devDependencies": {
     "@radix-ui/react-label": "^2.0.2",
