--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "react-resizable-panels": "^3.0.3",
     "recharts": "^2.12.0",
     "tailwind-merge": "^2.2.0",
-    "vaul": "^0.9.9"
+    "vaul": "^0.9.9",
+    "@supabase/supabase-js": "^2.39.7"
   },
   "scripts": {
     "dev": "vite",
