--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.0.0",
+    "@supabase/supabase-js": "^2.39.7",
     "axios": "^1.6.0",
     "cmdk": "^1.1.1",
     "date-fns": "^2.30.0",
@@ -41,8 +42,7 @@
     "react-resizable-panels": "^3.0.3",
     "recharts": "^2.12.0",
     "tailwind-merge": "^2.2.0",
-    "vaul": "^0.9.9",
-    "@supabase/supabase-js": "^2.39.7"
+    "vaul": "^0.9.9"
   },
   "scripts": {
     "dev": "vite",
@@ -72,6 +72,7 @@
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.0.0",
     "vite": "^5.0.0",
+    "vite-plugin-pwa": "^1.0.1",
     "zod": "^3.22.4"
   }
 }
