--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-quill": "^2.0.0",
     "react-resizable-panels": "^3.0.3",
     "recharts": "^2.12.0",
+    "resend": "^4.6.0",
     "tailwind-merge": "^2.2.0",
     "vaul": "^0.9.9"
   },
