--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@ VITE_SUPABASE_URL= https://<seu-projeto>.supabase.co
 VITE_SUPABASE_ANON_KEY=ANON_KEY....
 SUPABASE_SERVICE_ROLE_KEY=SERVICE_ROLE_KEY....
 RESEND_API_KEY=RESEND_API_KEY....
+SUPABASE_PROJECT_REF=seu-ref-projeto
 VITE_STRIPE_PUBLIC_KEY=
 VITE_SENTRY_DSN=
 VITE_GA_MEASUREMENT_ID=
