--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "axios": "^1.6.0",
     "cmdk": "^1.1.1",
     "date-fns": "^2.30.0",
+    "dotenv": "^17.2.1",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.6",
     "input-otp": "^1.4.2",
@@ -68,7 +69,6 @@
     "@sentry/react": "^8.12.0",
     "@supabase/ssr": "^0.1.0",
     "@tanstack/react-query": "^5.0.0",
-    "node-fetch": "^3.3.2",
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
@@ -77,6 +77,7 @@
     "autoprefixer": "^10.0.0",
     "class-variance-authority": "^0.7.1",
     "lucide-react": "^0.395.0",
+    "node-fetch": "^3.3.2",
     "react-router-dom": "^6.0.0",
     "sonner": "^1.0.0",
     "supabase": "^2.26.9",
