--- a/package.json
+++ b/package.json
@@ -82,7 +82,6 @@
     "typescript": "^5.0.0",
     "vite": "^5.0.0",
     "vite-plugin-pwa": "^1.0.1",
-    "zod": "^3.22.4",
-    "@hookform/resolvers": "^3.3.1"
+    "zod": "^3.22.4"
   }
 }
