--- a/package.json
+++ b/package.json
@@ -70,10 +70,13 @@
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "@typescript-eslint/eslint-plugin": "^8.39.1",
+    "@typescript-eslint/parser": "^8.39.1",
     "@vercel/speed-insights": "latest",
     "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.0.0",
     "class-variance-authority": "^0.7.1",
+    "eslint": "^9.33.0",
     "node-fetch": "^3.3.2",
     "react-router-dom": "^6.0.0",
     "sonner": "^1.0.0",
