feat(security): implement comprehensive security improvements
- Add environment variable validation with required checks
- Create security check script for dependencies
- Remove hardcoded credentials and use env variables
- Improve service worker cache configuration
- Enhance TypeScript strictness in config
- Add error handling for analytics initialization
- Document security improvements in SECURITY_IMPROVEMENTS.md

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,20 @@
-VITE_SUPABASE_URL= https://<seu-projeto>.supabase.co
+# Supabase - Obrigatório para autenticação e banco de dados
+VITE_SUPABASE_URL=https://<seu-projeto>.supabase.co
 VITE_SUPABASE_ANON_KEY=ANON_KEY....
+
+# Supabase - Chave de serviço (usada apenas em funções Edge)
 SUPABASE_SERVICE_ROLE_KEY=SERVICE_ROLE_KEY....
-RESEND_API_KEY=RESEND_API_KEY....
 SUPABASE_PROJECT_REF=seu-ref-projeto
-VITE_STRIPE_PUBLIC_KEY=
-VITE_SENTRY_DSN=
-VITE_GA_MEASUREMENT_ID=
+
+# Resend - Serviço de envio de emails (usado nas funções Edge)
+VITE_RESEND_API_KEY=RESEND_API_KEY....
+RESEND_API_KEY=RESEND_API_KEY....
+
+# Stripe - Obrigatório para processamento de pagamentos
+VITE_STRIPE_PUBLIC_KEY=pk_test_...
+
+# Sentry - Opcional para monitoramento de erros
+VITE_SENTRY_DSN=https://...
+
+# Google Analytics - Opcional para análise de uso
+VITE_GA_MEASUREMENT_ID=G-...
