ci: migrate deployment from Firebase to Vercel
- Update GitHub Actions workflow to use Vercel instead of Firebase
- Add required Vercel environment variables to .env.example
- Update README with detailed Vercel deployment instructions

--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,9 @@ VITE_SENTRY_DSN=https://...
 
 # Google Analytics - Opcional para análise de uso
 VITE_GA_MEASUREMENT_ID=G-...
+
+# Vercel - Para deploy automático via GitHub Actions
+# Obtenha estes valores executando 'npx vercel link' ou no dashboard do Vercel
+VERCEL_TOKEN=your_vercel_token_here
+VERCEL_ORG_ID=your_vercel_org_id_here
+VERCEL_PROJECT_ID=your_vercel_project_id_here
