--- a/package.json
+++ b/package.json
@@ -54,14 +54,21 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "build:dev": "vite build --mode development",
-    "build:prod": "vite build --mode production",
+    "build:dev": "tsc -b && vite build --mode development",
+    "build:prod": "tsc -b && vite build --mode production",
+    "build": "npm run lint && npm run test && npm run build:prod",
     "preview": "vite preview",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "postbuild": "node scripts/optimize-assets.js",
-    "security-check": "node scripts/check-dependencies.js",
-    "prebuild": "npm run security-check"
+    "lint:fix": "eslint . --ext ts,tsx --fix",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui",
+    "type-check": "tsc --noEmit",
+    "postbuild": "node scripts/post-build.js",
+    "security-check": "npm audit --audit-level moderate",
+    "security-fix": "npm audit fix",
+    "analyze": "npm run build:prod && npx vite-bundle-analyzer dist"
   },
   "devDependencies": {
     "@radix-ui/react-label": "^2.0.2",
@@ -72,13 +79,15 @@
     "@types/node": "^20.0.0",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
-    "@typescript-eslint/eslint-plugin": "^8.39.1",
-    "@typescript-eslint/parser": "^8.39.1",
+    "@typescript-eslint/eslint-plugin": "^8.40.0",
+    "@typescript-eslint/parser": "^8.40.0",
     "@vercel/speed-insights": "latest",
     "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.0.0",
     "class-variance-authority": "^0.7.1",
     "eslint": "^9.33.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
     "node-fetch": "^3.3.2",
     "react-router-dom": "^6.0.0",
     "sonner": "^1.0.0",
@@ -86,6 +95,7 @@
     "tailwindcss": "^3.0.0",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.0.0",
+    "typescript-eslint": "^8.40.0",
     "vite": "^5.0.0",
     "vite-plugin-pwa": "^1.0.1",
     "zod": "^3.22.4"
