chore: clean up configuration and enhance service worker functionality
- Remove postbuild script from package.json
- Delete unused package.json.bak file
- Update vercel.json to include new environment variables for Resend integration
- Increment service worker cache version and implement immediate activation
- Refactor service worker to improve caching strategy and error handling
- Remove unused CartContext file
- Update useAdminData hook by removing pagination logic
- Change VITE_STRIPE_PUBLIC_KEY to not required in env-validator
- Enhance send-keepsakes function with improved rate limiting and error handling
- Update README for send-keepsakes function with new features and usage instructions

--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,9 @@
     "VITE_SUPABASE_ANON_KEY": "@supabase_anon_key",
     "VITE_STRIPE_PUBLIC_KEY": "@stripe_public_key",
     "VITE_SENTRY_DSN": "@sentry_dsn",
-    "VITE_GA_MEASUREMENT_ID": "@ga_measurement_id"
+    "VITE_GA_MEASUREMENT_ID": "@ga_measurement_id",
+    "RESEND_API_KEY": "@resend_api_key",
+    "RESEND_FROM": "@resend_from"
   },
   "functions": {
     "api/**/*.js": {
@@ -24,7 +26,8 @@
       "headers": [
         { "key": "X-Content-Type-Options", "value": "nosniff" },
         { "key": "X-Frame-Options", "value": "DENY" },
-        { "key": "X-XSS-Protection", "value": "1; mode=block" }
+        { "key": "Referrer-Policy", "value": "strict-origin-when-cross-origin" },
+        { "key": "Permissions-Policy", "value": "camera=(), microphone=(), geolocation=()" }
       ]
     }
   ]
