--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.0.0",
     "@supabase/supabase-js": "^2.53.0",
+    "aria-query": "^5.3.2",
     "axios": "^1.6.0",
     "cmdk": "^1.1.1",
     "date-fns": "^2.30.0",
@@ -58,9 +59,9 @@
     "build:prod": "tsc -b && vite build --mode production",
     "build": "npm run lint && npm run test && npm run build:prod",
     "preview": "vite preview",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives",
     "lint:fix": "eslint . --ext ts,tsx --fix",
-    "test": "vitest run",
+    "test": "npx vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui",
@@ -75,6 +76,7 @@
     "@sentry/react": "^8.12.0",
     "@supabase/ssr": "^0.6.1",
     "@tanstack/react-query": "^5.0.0",
+    "@testing-library/jest-dom": "^6.4.2",
     "@types/node": "^20.0.0",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
@@ -82,21 +84,24 @@
     "@typescript-eslint/parser": "^8.40.0",
     "@vercel/speed-insights": "latest",
     "@vitejs/plugin-react": "^4.0.0",
+    "@testing-library/react": "^16.0.0",
     "autoprefixer": "^10.0.0",
     "class-variance-authority": "^0.7.1",
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
+    "jsdom": "^24.0.0",
     "node-fetch": "^3.3.2",
     "react-router-dom": "^6.0.0",
     "sonner": "^1.0.0",
-    "supabase": "^2.26.9",
+    "supabase": "^2.34.3",
     "tailwindcss": "^3.0.0",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.4.5",
     "typescript-eslint": "^8.40.0",
     "vite": "^5.0.0",
     "vite-plugin-pwa": "^1.0.1",
+    "vitest": "^1.0.0",
     "zod": "^3.22.4"
   }
 }
