refactor: update tsconfig and add loading state to button component
- Update tsconfig files with proper module resolution and react settings
- Add loading state and spinner to button component
- Remove unused React imports and add explicit types
- Update testing library dependencies

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,8 @@
   ],
   "compilerOptions": {
     "types": ["vitest/globals"],
+    "jsx": "react-jsx",
+    "jsxImportSource": "react",
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"],
