--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -3,18 +3,21 @@
     "target": "ES2020",
     "useDefineForClassFields": true,
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
-    "module": "ESNext",
-    "skipLibCheck": true,
-
-    /* Bundler mode */
-    "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
+    "module": "CommonJS",
+    "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
-    "isolatedModules": true,
+    "skipLibCheck": true,
+    "types": [],
+
+    /* Bundler mode */
+    "moduleResolution": "node",
+    "allowImportingTsExtensions": true,
+    "isolatedModules": false,
     "moduleDetection": "force",
     "noEmit": true,
     "jsx": "react-jsx",
+    "jsxImportSource": "react",
 
     /* Linting */
     "strict": true,
@@ -32,5 +35,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["src", "src/types", "src/types/react.d.ts"]
+  "include": ["src", "src/types", "src/types/react.d.ts"],
+    "typeRoots": ["./node_modules/@types", "./src/types"]
 }
