refactor(imports): optimize react imports across components
build(deps): update jsdom to v24.1.3
build(scripts): redirect build:prod output to file
docs: add install_log.txt for debugging purposes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,40 @@
 {
-  "files": [],
-  "references": [
-    { "path": "./tsconfig.app.json" },
-    { "path": "./tsconfig.node.json" }
-  ],
   "compilerOptions": {
-    "types": ["vitest/globals"],
+    "target": "ES2020",
+    "useDefineForClassFields": true,
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "module": "ESNext",
+    "moduleResolution": "bundler",
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "types": ["jsdom", "@testing-library/jest-dom", "vitest/globals", "react"],
+
+    /* Bundler mode */
+    "allowImportingTsExtensions": true,
+    "isolatedModules": false,
+    "moduleDetection": "force",
+    "noEmit": true,
     "jsx": "react-jsx",
     "jsxImportSource": "react",
+
+    /* Linting */
+    "strict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noImplicitAny": true,
+    "noFallthroughCasesInSwitch": true,
+    "exactOptionalPropertyTypes": true,
+    "noImplicitReturns": true,
+    "noImplicitThis": true,
+    "noUncheckedIndexedAccess": true,
+
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"],
       "react-quill": ["node_modules/react-quill"],
       "react-calendar": ["node_modules/react-calendar"]
-    },
-    "noImplicitAny": true,
-    "noUnusedParameters": true,
-    "skipLibCheck": true,
-    "allowJs": true,
-    "noUnusedLocals": true,
-    "strictNullChecks": true
-  }
+    }
+  },
+  "include": ["src", "src/types", "src/types/react.d.ts"]
 }
