--- a/package.json
+++ b/package.json
@@ -56,11 +56,11 @@
   "scripts": {
     "dev": "vite",
     "build:dev": "tsc -b && vite build --mode development",
-    "build:prod": "tsc -b && vite build --mode production",
+    "build:prod": "tsc -b && vite build --mode production > build_output.txt 2>&1",
     "build": "npm run lint && npm run test && npm run build:prod",
     "preview": "vite preview",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives",
-    "lint:fix": "eslint . --ext ts,tsx --fix",
+    "lint": "eslint . --report-unused-disable-directives --no-error-on-unmatched-pattern",
+    "lint:fix": "eslint . --fix",
     "test": "npx vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
@@ -79,18 +79,19 @@
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.0.0",
     "@types/node": "^20.0.0",
-    "@types/react": "^18.3.23",
+    "@types/react": "^18.3.24",
     "@types/react-dom": "^18.3.7",
-    "@typescript-eslint/eslint-plugin": "^8.40.0",
-    "@typescript-eslint/parser": "^8.40.0",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "@vercel/speed-insights": "latest",
     "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.0.0",
     "class-variance-authority": "^0.7.1",
-    "eslint": "^9.33.0",
+    "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
-    "jsdom": "^24.0.0",
+    "jest-environment-jsdom": "^30.0.5",
+    "jsdom": "^24.1.3",
     "node-fetch": "^3.3.2",
     "react-router-dom": "^6.0.0",
     "sonner": "^1.0.0",
@@ -98,7 +99,6 @@
     "tailwindcss": "^3.0.0",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.4.5",
-    "typescript-eslint": "^8.40.0",
     "vite": "^5.0.0",
     "vite-plugin-pwa": "^1.0.1",
     "vitest": "^1.0.0",
