--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-calendar": "^6.0.0",
     "react-day-picker": "^9.7.0",
     "react-dom": "^18.2.0",
+    "@testing-library/jest-dom": "^6.4.5",
     "react-hook-form": "^7.59.0",
     "react-quill": "^2.0.0",
     "react-resizable-panels": "^3.0.3",
