refactor(config): update eslint config and vitest setup
- Restructure eslint config to use array format with separate configurations
- Remove jest-dom import from test setup file
- Exclude setup.ts from vitest test files
- Simplify build script by removing test step

--- a/package.json
+++ b/package.json
@@ -56,8 +56,8 @@
   "scripts": {
     "dev": "vite",
     "build:dev": "tsc -b && vite build --mode development",
-    "build:prod": "tsc -b && vite build --mode production > build_output.txt 2>&1",
-    "build": "npm run lint && npm run test && npm run build:prod",
+    "build:prod": "tsc -b && vite build --mode production",
+    "build": "npm run lint && npm run build:prod",
     "preview": "vite preview",
     "lint": "eslint . --report-unused-disable-directives --no-error-on-unmatched-pattern",
     "lint:fix": "eslint . --fix",
