--- a/package.json
+++ b/package.json
@@ -76,19 +76,20 @@
     "@sentry/react": "^8.12.0",
     "@supabase/ssr": "^0.6.1",
     "@tanstack/react-query": "^5.0.0",
-
-    "@testing-library/react": "^16.0.0",
     "@testing-library/jest-dom": "^6.4.5",
+    "@testing-library/react": "^16.0.0",
+    "@types/cypress": "^0.1.6",
     "@types/node": "^20.0.0",
     "@types/react": "^18.3.24",
     "@types/react-dom": "^18.3.7",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
+    "@typescript-eslint/eslint-plugin": "^8.41.0",
+    "@typescript-eslint/parser": "^8.41.0",
     "@vercel/speed-insights": "latest",
     "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.0.0",
     "class-variance-authority": "^0.7.1",
-    "eslint": "^8.57.0",
+    "eslint": "^9.34.0",
+    "eslint-plugin-cypress": "^5.1.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "jest-environment-jsdom": "^30.0.5",
