--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.0.0",
     "@supabase/supabase-js": "^2.53.0",
+    "@types/react": "^18.3.24",
+    "@types/react-dom": "^18.3.7",
     "aria-query": "^5.3.2",
     "axios": "^1.6.0",
     "cmdk": "^1.1.1",
@@ -41,10 +43,10 @@
     "lovable-tagger": "^1.1.8",
     "lucide-react": "^0.395.0",
     "next-themes": "^0.3.0",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-calendar": "^6.0.0",
     "react-day-picker": "^9.7.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.59.0",
     "react-quill": "^2.0.0",
     "react-resizable-panels": "^3.0.3",
@@ -59,7 +61,7 @@
     "build:prod": "tsc -b && vite build --mode production",
     "build": "npm run lint && npm run test && npm run build:prod",
     "preview": "vite preview",
-    "lint": "eslint . --report-unused-disable-directives --no-error-on-unmatched-pattern",
+    "lint": "npx eslint . --report-unused-disable-directives --no-error-on-unmatched-pattern",
     "lint:fix": "eslint . --fix",
     "test": "npx vitest run",
     "test:watch": "vitest",
@@ -80,12 +82,12 @@
     "@testing-library/react": "^16.0.0",
     "@types/cypress": "^0.1.6",
     "@types/node": "^20.0.0",
-    "@types/react": "^18.3.24",
-    "@types/react-dom": "^18.3.7",
+    "@types/testing-library__jest-dom": "^5.14.9",
     "@typescript-eslint/eslint-plugin": "^8.41.0",
     "@typescript-eslint/parser": "^8.41.0",
     "@vercel/speed-insights": "latest",
     "@vitejs/plugin-react": "^4.0.0",
+    "@vitest/ui": "^3.2.4",
     "autoprefixer": "^10.0.0",
     "class-variance-authority": "^0.7.1",
     "eslint": "^9.34.0",
@@ -103,7 +105,7 @@
     "typescript": "^5.4.5",
     "vite": "^5.0.0",
     "vite-plugin-pwa": "^1.0.1",
-    "vitest": "^1.0.0",
+    "vitest": "^3.2.4",
     "zod": "^3.22.4"
   }
 }
