feat(security): implement comprehensive security measures
- Add security middleware initialization in App component
- Create security configuration with environment-based settings
- Update Supabase client to use env vars and enhance auth flow
- Add security-related environment variables to .env.example
- Implement file path validation and input sanitization utilities

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,15 @@ VITE_SUPABASE_ANON_KEY=ANON_KEY....
 SUPABASE_SERVICE_ROLE_KEY=SERVICE_ROLE_KEY....
 SUPABASE_PROJECT_REF=seu-ref-projeto
 
+# Security Settings - Required for application security
+VITE_ENABLE_PASSWORD_PROTECTION=true
+VITE_ENABLE_EXTENSION_SECURITY=true
+VITE_SECURE_FUNCTION_PATHS=true
+VITE_ENABLE_SESSION_PROTECTION=true
+VITE_ENABLE_PERSONAL_DATA_PROTECTION=true
+VITE_ENABLE_CONTACT_INFO_PROTECTION=true
+VITE_ENABLE_FINANCIAL_DATA_PROTECTION=true
+
 # Resend - Serviço de envio de emails (usado nas funções Edge)
 VITE_RESEND_API_KEY=RESEND_API_KEY....
 RESEND_API_KEY=RESEND_API_KEY....
