test: add component and page test files
Add test files for Navigation, Button, and dummy components, as well as About and NotFound pages. Update .gitignore to track test files for proper testing.

--- a/.gitignore
+++ b/.gitignore
@@ -51,11 +51,5 @@ coverage
 *.so
 *.out
 
-# Test files
-*.test.js
-*.test.ts
-*.test.tsx
-*.spec.js
-*.spec.ts
-*.spec.tsx
+# Test files are now tracked for proper testing
 .vercel
