--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@supabase/supabase-js": "^2.53.0",
     "@types/react": "^18.3.24",
     "@types/react-dom": "^18.3.7",
+    "@vercel/analytics": "^1.5.0",
     "aria-query": "^5.3.2",
     "axios": "^1.7.7",
     "cmdk": "^1.1.1",
@@ -49,11 +50,11 @@
     "react-day-picker": "^9.7.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.59.0",
-    "react-quill": "^2.0.0",
+    "react-quill": "^0.0.2",
     "react-resizable-panels": "^3.0.3",
+    "react-router-dom": "^6.26.1",
     "recharts": "^2.12.0",
     "resend": "^4.8.0",
-    "react-router-dom": "^6.26.1",
     "tailwind-merge": "^2.2.0",
     "vaul": "^0.9.9"
   },
