feat(freemium): implement freemium model with upsell flow
Add freemium features including free keepsake creation with keyword detection for upsell opportunities. Includes:
- New dependencies for AI, payments and UI
- Database migrations for freemium features
- FreeKeepsakeForm component with multi-step flow
- UpgradeModal for presenting premium options
- Keyword detection and personalized upsell offers
- Stripe integration setup in env example

--- a/.env.example
+++ b/.env.example
@@ -15,12 +15,17 @@ VITE_ENABLE_PERSONAL_DATA_PROTECTION=true
 VITE_ENABLE_CONTACT_INFO_PROTECTION=true
 VITE_ENABLE_FINANCIAL_DATA_PROTECTION=true
 
+# Anthropic Claude - Para geração de storytelling com IA
+ANTHROPIC_API_KEY=your_anthropic_api_key_here
+
 # Resend - Serviço de envio de emails (usado nas funções Edge)
 VITE_RESEND_API_KEY=RESEND_API_KEY....
 RESEND_API_KEY=RESEND_API_KEY....
 
 # Stripe - Obrigatório para processamento de pagamentos
 VITE_STRIPE_PUBLIC_KEY=pk_test_...
+STRIPE_PUBLIC_KEY=pk_test_your_stripe_public_key_here
+STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key_here
 
 # Sentry - Opcional para monitoramento de erros
 VITE_SENTRY_DSN=https://...
