--- a/package.json
+++ b/package.json
@@ -56,7 +56,10 @@
     "recharts": "^2.12.0",
     "resend": "^4.8.0",
     "tailwind-merge": "^2.2.0",
-    "vaul": "^0.9.9"
+    "vaul": "^0.9.9",
+    "@anthropic-ai/sdk": "^0.24.3",
+    "@stripe/stripe-js": "^4.4.0",
+    "react-confetti": "^6.1.0"
   },
   "scripts": {
     "dev": "vite",
@@ -108,6 +111,9 @@
     "vite": "^5.0.0",
     "vite-plugin-pwa": "^1.0.1",
     "vitest": "^3.2.4",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "@playwright/test": "^1.47.0",
+    "cypress": "^13.15.0",
+    "@headlessui/react": "^2.1.10"
   }
 }
