feat(ai): implement AI quota system with Hugging Face integration
Add AI quota tracking with daily limits based on user subscription tier. Includes:
- API usage tracking table in Supabase
- AIQuotaStatus component to display usage
- useAIQuota hook for quota management
- Hugging Face API integration for suggestions
- Subscription tier limits (free: 3, premium: 50, family: 100)
- Fallback suggestions when API is unavailable
- Upgrade prompts when quota is exceeded

--- a/.env.example
+++ b/.env.example
@@ -15,8 +15,8 @@ VITE_ENABLE_PERSONAL_DATA_PROTECTION=true
 VITE_ENABLE_CONTACT_INFO_PROTECTION=true
 VITE_ENABLE_FINANCIAL_DATA_PROTECTION=true
 
-# Anthropic Claude - Para geração de storytelling com IA
-ANTHROPIC_API_KEY=your_anthropic_api_key_here
+# Hugging Face API
+HUGGINGFACE_API_KEY=your_huggingface_api_key_here
 
 # Resend - Serviço de envio de emails (usado nas funções Edge)
 VITE_RESEND_API_KEY=RESEND_API_KEY....
