--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "type": "module",
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.24.3",
     "@chakra-ui/react": "^3.22.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
@@ -28,6 +29,7 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.0.0",
+    "@stripe/stripe-js": "^4.4.0",
     "@supabase/supabase-js": "^2.53.0",
     "@types/react": "^18.3.24",
     "@types/react-dom": "^18.3.7",
@@ -47,19 +49,17 @@
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-calendar": "^6.0.0",
+    "react-confetti": "^6.1.0",
     "react-day-picker": "^9.7.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.59.0",
-    "react-quill": "^0.0.2",
+    "react-quill": "^2.0.0",
     "react-resizable-panels": "^3.0.3",
     "react-router-dom": "^6.26.1",
     "recharts": "^2.12.0",
     "resend": "^4.8.0",
     "tailwind-merge": "^2.2.0",
-    "vaul": "^0.9.9",
-    "@anthropic-ai/sdk": "^0.24.3",
-    "@stripe/stripe-js": "^4.4.0",
-    "react-confetti": "^6.1.0"
+    "vaul": "^0.9.9"
   },
   "scripts": {
     "dev": "vite",
@@ -79,6 +79,8 @@
     "analyze": "npm run build:prod && npx vite-bundle-analyzer dist"
   },
   "devDependencies": {
+    "@headlessui/react": "^2.1.10",
+    "@playwright/test": "^1.47.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-progress": "^1.0.2",
     "@sentry/react": "^8.12.0",
@@ -96,6 +98,7 @@
     "@vitest/ui": "^3.2.4",
     "autoprefixer": "^10.0.0",
     "class-variance-authority": "^0.7.1",
+    "cypress": "^13.15.0",
     "eslint": "^9.34.0",
     "eslint-plugin-cypress": "^5.1.1",
     "eslint-plugin-react-hooks": "^5.2.0",
@@ -111,9 +114,6 @@
     "vite": "^5.0.0",
     "vite-plugin-pwa": "^1.0.1",
     "vitest": "^3.2.4",
-    "zod": "^3.22.4",
-    "@playwright/test": "^1.47.0",
-    "cypress": "^13.15.0",
-    "@headlessui/react": "^2.1.10"
+    "zod": "^3.22.4"
   }
 }
