--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,8 +31,8 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"],
-      "react-quill": ["node_modules/react-quill"],
-      "react-calendar": ["node_modules/react-calendar"]
+"react-quill": ["./node_modules/react-quill"],
+"react-calendar": ["./node_modules/react-calendar"]
     }
   },
   "include": ["src", "src/types", "src/types/react.d.ts"]
