--- a/public/manifest.json
+++ b/public/manifest.json
@@ -12,13 +12,13 @@
   "lang": "pt",
   "icons": [
     {
-      "src": "/keepla-logo-red.svg",
+      "src": "/keepla-logo-red-new.svg",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/keepla-logo-red.svg",
+      "src": "/keepla-logo-red-new.svg",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
