--- a/public/manifest.json
+++ b/public/manifest.json
@@ -12,13 +12,13 @@
   "lang": "pt",
   "icons": [
     {
-      "src": "/keepla-logo-red.png",
+      "src": "/lovable-uploads/a58d6383-77f7-451e-b692-d10c4298397e.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/keepla-logo-red.png",
+      "src": "/lovable-uploads/a58d6383-77f7-451e-b692-d10c4298397e.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
