--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "@typescript-eslint/parser": "^8.41.0",
     "@vercel/speed-insights": "latest",
     "@vitejs/plugin-react": "^4.0.0",
+    "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "^3.2.4",
     "autoprefixer": "^10.0.0",
     "class-variance-authority": "^0.7.1",
