feat(ui): improve form navigation and mobile responsiveness
refactor: add type safety to product calculations in ReviewStep
fix: update localhost port references in SEO files
chore: add SITE_URL to environment variables example

--- a/.env.example
+++ b/.env.example
@@ -33,6 +33,10 @@ VITE_SENTRY_DSN=https://...
 # Google Analytics - Opcional para análise de uso
 VITE_GA_MEASUREMENT_ID=G-...
 
+# SEO / Sitemap - Define o domínio canónico usado no sitemap.xml e robots.txt
+# EXEMPLO: https://www.seu-dominio.com
+SITE_URL=https://www.seu-dominio.com
+
 # Vercel - Para deploy automático via GitHub Actions
 # Obtenha estes valores executando 'npx vercel link' ou no dashboard do Vercel
 VERCEL_TOKEN=your_vercel_token_here
