--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,17 +24,8 @@ jobs:
       - name: Run lint
         run: npm run lint
       
-      - name: Run tests with coverage
-        run: npm test -- --coverage
-      
-      - name: Upload coverage reports
-        uses: codecov/codecov-action@v4
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          files: ./coverage/lcov.info
-          flags: unittests
-          name: codecov-umbrella
-          fail_ci_if_error: true
+      - name: Run tests
+        run: npm test
   
   build-and-deploy:
     runs-on: ubuntu-latest
