ci: add installCommand to vercel.json
Use legacy-peer-deps flag to resolve potential dependency conflicts during installation

--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,7 @@
   "version": 2,
   "framework": "vite",
   "buildCommand": "npm run build",
+  "installCommand": "npm ci --legacy-peer-deps",
   "outputDirectory": "dist",
 
 
