--- a/.github/workflows/validate-supabase.yml
+++ b/.github/workflows/validate-supabase.yml
@@ -15,23 +15,24 @@ jobs:
     - name: Setup Node.js 
       uses: actions/setup-node@v3 
       with: 
-        node-version: '18' 
+        node-version: '20' 
+        cache: 'npm'
     
-    - name: Install Supabase CLI 
-      run: npm install -g supabase 
+    - name: Install dependencies
+      run: npm ci
     
     - name: Configure Supabase 
       env: 
         SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }} 
         SUPABASE_PROJECT_ID: ${{ secrets.SUPABASE_PROJECT_ID }} 
       run: | 
-        supabase login --token $SUPABASE_ACCESS_TOKEN 
-        supabase link --project-ref $SUPABASE_PROJECT_ID 
+        npx supabase login --token $SUPABASE_ACCESS_TOKEN 
+        npx supabase link --project-ref $SUPABASE_PROJECT_ID 
     
     - name: Pull and Compare Schema 
       run: | 
-        supabase db pull 
-        DIFF=$(supabase db diff || true) 
+        npx supabase db pull 
+        DIFF=$(npx supabase db diff || true) 
         
         if [ -n "$DIFF" ]; then 
           echo "⚠️ Schema differences detected:" 
