--- a/.github/workflows/validate-supabase.yml
+++ b/.github/workflows/validate-supabase.yml
@@ -21,12 +21,22 @@ jobs:
     - name: Install dependencies
       run: npm ci
     
+    - name: Check Supabase Secrets
+      env:
+        SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
+        SUPABASE_PROJECT_ID: ${{ secrets.SUPABASE_PROJECT_ID }}
+      run: |
+        if [ -z "$SUPABASE_ACCESS_TOKEN" ] || [ -z "$SUPABASE_PROJECT_ID" ]; then
+          echo "::error title=Supabase Secrets Missing::Configure SUPABASE_ACCESS_TOKEN and SUPABASE_PROJECT_ID in repository secrets"
+          exit 1
+        fi
+    
     - name: Configure Supabase 
       env: 
         SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }} 
         SUPABASE_PROJECT_ID: ${{ secrets.SUPABASE_PROJECT_ID }} 
       run: | 
-        npx supabase login --token $SUPABASE_ACCESS_TOKEN 
+        npx supabase login --no-browser --token $SUPABASE_ACCESS_TOKEN 
         npx supabase link --project-ref $SUPABASE_PROJECT_ID 
     
     - name: Pull and Compare Schema 
