--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@hookform/resolvers": "^5.2.1",
+    "@jridgewell/sourcemap-codec": "^1.5.5",
+    "@popperjs/core": "^2.11.8",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-aspect-ratio": "^1.1.7",
@@ -65,6 +67,7 @@
     "react-router-dom": "^6.26.1",
     "recharts": "^2.12.0",
     "resend": "^4.8.0",
+    "source-map": "^0.7.3",
     "tailwind-merge": "^2.2.0",
     "vaul": "^0.9.9"
   },
